--- a/src/index.scss
+++ b/src/index.scss
@@ -80,7 +80,7 @@ h1 {
   padding-left: 10px;
   color: black;
   font-weight: 700;
-  font-size: 12px;
+  font-size: 18px;
   align-self: center;
 
   //background-color: #fff9c4;
@@ -94,8 +94,9 @@ h1 {
 }
 
 .hc-item {
-  padding: 2px;
-  font-size: 11px; /* Adjust the font size as needed */
+  padding: 2px 10px;
+  padding-left: 5px;
+  font-size: 12px; /* Adjust the font size as needed */
   color: rgb(20, 19, 19);
   font-weight: 600;
   background-color: #1e88e5;
@@ -105,11 +106,21 @@ h1 {
     filter: brightness(1.2);
   }
 }
+.hc-pill {
+  font-size: 9px;
+  color: black;
+}
+.hc-pill_menu {
+  @extend .hc-pill;
+  font-size: 11px;
+  color: black;
+}
+
 
 .hc-item-menu {
   @extend .hc-item;
   color: rgb(255, 253, 253);
-  font-size: 11px;
+  font-size: 13px;
   font-weight: 600;
   border: #424242 1px solid;
   background-color: #6c757d;
@@ -130,12 +141,22 @@ h1 {
   display: flex;
   align-items: center;
   column-gap: 10px;
-  width: 60px;
-  border-radius: 50%;
+  width: 70px;
+  border-radius: 15%;
   object-fit: cover;
   animation: fade-down 0.5s 0.4s backwards;
+  transition: all 0.3s ease;
+  &:hover {
+    background-color: rgb(4, 4, 4);
+    color: $logo-color;
+  }
 }
-
+.logo_text {
+  padding: 1px;
+  &:hover {
+    color: $logo-color;
+  }
+}
 .postit {
   min-height: 300px;
   min-width: 300px;
@@ -176,16 +197,14 @@ h1 {
   padding: 5px;
 }
 .logo-card-icon-color {
-  color: $logo-color;
+  padding-left: 5px;
+  color: #64ffda;
   transition: all 0.3s ease;
   &:hover {
-    scale: 1.2;
+    scale: 1.4;
   }
 }
 .logo-card-icon-color_link {
-  color: #0277bd;
-  transition: all 0.3s ease;
-  &:hover {
-    scale: 1.2;
-  }
+  @extend .logo-card-icon-color;
+  color: #40c4ff;
 }
