--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,16 @@ h1 {
   display: flex;
   column-gap: 1cap;
 }
+.hc-container__top_left_bar {
+  display: flex;
+  column-gap: 10px;
+  color: black;
+  font-weight: 700;
+  font-size: 18px;
+  align-self: center;
+  padding: 1px 8px;
+  //background-color: #fff9c4;
+}
 .hc-container__top_right_bar {
   display: flex;
   margin: 0px 0px 0px auto;
@@ -80,17 +90,6 @@ h1 {
   //background-color: green;
 }
 
-.hc-container__top_left_bar {
-  display: flex;
-   column-gap: 10px;
-  color: black;
-  font-weight: 700;
-  font-size: 18px;
-  align-self: center;
-  background-color: #c9c7c0;
-
-  //background-color: #fff9c4;
-}
 .hc-container__body {
   display: flex;
   column-gap: 1px;
@@ -127,6 +126,7 @@ h1 {
   color: rgb(255, 253, 253);
   font-size: 13px;
   font-weight: 600;
+  align-self: center;
   border: #424242 1px solid;
   background-color: #6c757d;
   transition: filter 0.3s ease;
@@ -203,7 +203,7 @@ h1 {
 }
 .card-icon {
   padding-left: 5px;
-  color: #64ffda;
+  color: #edede9;
   transition: all 0.3s ease;
   &:hover {
     scale: 1.4;
@@ -215,14 +215,18 @@ h1 {
   font-weight: 700;
 }
 
-.dash-container{
+.dash-container {
   display: flex;
-   column-gap: px;
+  column-gap: px;
 }
 .dash-icon {
   @extend .card-icon;
   color: #ed6c6c;
-  align-items: center;
+  align-self: center;
+  background-color: rgb(62, 62, 62);
+  border-radius: 50%;
+  height: 28px;
+  width: 30px;
 }
 
 .dash-text {
